crates/oxc_react_compiler/tests/snapshots/fbt__fbt-params.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-params.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Component(props) {
	const $ = _c(7);
	let t0;
	if ($[0] !== props.name) {
		t0 = <fbt desc="Dialog to show to user">
        Hello <fbt:param name="user name">{props.name}</fbt:param>
      </fbt>;
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== props.actions) {
		t1 = <fbt desc="Available actions|response">
        <fbt:param name="actions|response">{props.actions}</fbt:param>
      </fbt>;
		$[2] = props.actions;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	let t2;
	if ($[4] !== t0 || $[5] !== t1) {
		t2 = <div>{t0}{t1}</div>;
		$[4] = t0;
		$[5] = t1;
		$[6] = t2;
	} else {
		t2 = $[6];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
