crates/oxc_react_compiler/tests/snapshots/fbt__fbt-preserve-jsxtext.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-preserve-jsxtext.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Foo(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.value) {
		t0 = <fbt desc="Some text to be translated">
      <fbt:enum enum-range={{
			"0": "hello",
			"1": "goodbye"
		}} value={props.value ? "0" : "1"} />{" "}
      <fbt:param name="value">{props.value}</fbt:param>
      {", "}
    </fbt>;
		$[0] = props.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{ value: 1 }],
	sequentialRenders: [{ value: 1 }, { value: 0 }]
};
