crates/oxc_react_compiler/tests/snapshots/fbt__fbt-preserve-whitespace-subtree.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-preserve-whitespace-subtree.tsx
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
/**
* Note that fbt whitespace rules apply to the entire fbt subtree,
* not just direct children of fbt elements.
* (e.g. here, the JSXText children of the span element also use
* fbt whitespace rules)
*/
function Foo(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		t0 = <fbt desc="Dialog to show to user">
      <span key={props.name}>
        <fbt:param name="user name really long description for prettier">
          {props.name}
        </fbt:param>
        !
      </span>
    </fbt>;
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{ name: "Jason" }]
};
