crates/oxc_react_compiler/tests/snapshots/fbt__fbt-unknown-enum-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-unknown-enum-value.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Component(t0) {
	const $ = _c(3);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a || $[1] !== b) {
		t1 = <fbt desc="Description">
      <fbt:enum enum-range={["avalue1", "avalue1"]} value={a} />{" "}
      <fbt:enum enum-range={["bvalue1", "bvalue2"]} value={b} />
    </fbt>;
		$[0] = a;
		$[1] = b;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		a: "avalue1",
		b: "bvalue2"
	}]
};
