crates/oxc_react_compiler/tests/snapshots/fbt__fbt-whitespace-around-param-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbt-whitespace-around-param-value.tsx
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
const _ = fbt;
function Component(t0) {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		t1 = fbt._("Before text {paramName} after text", [fbt._param("paramName", value)], { hk: "26pxNm" });
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "hello world" }]
};
